--- a/jedy-2/css/style_v4.scss
+++ b/jedy-2/css/style_v4.scss
@@ -5,7 +5,6 @@ $active: #e74c3c;
 $green: #66d6c5;
 $yellow: #f4de7f;
 $slight-yellow: cornsilk;
-// $strong-yellow:#FEC804;
 $strong-yellow: #fcbc49;
 $slight-gray: #f8f8f8;
 
@@ -20,7 +19,7 @@ Default Styles
 body {
   box-sizing: border-box;
   // font: 18px Arial, sans-serif;
-  font-family: "Noto Sans TC", sans-serif, "微軟正黑體";
+  font-family: "Comfortaa", sans-serif, "微軟正黑體";
   color: black;
   background-color: cornsilk;
   // background-color: black;
@@ -38,206 +37,6 @@ body {
   }
 }
 
-/*================================================================
-Navbar
-================================================================*/
-#main-navbar {
-  width: 100%;
-
-    .container>.navbar-header {
-      margin-right: 0px;
-      margin-left: 0px;
-  }
-}
-
-.navbar {
-  // opacity: 0.8;
-  margin-bottom: 0;
-  transition: all 0.2s ease-out;
-}
-
-.navbar-container {
-  position: relative;
-  width: 100%;
-}
-
-.nav {
-  margin: 0 auto;
-  position: absolute;
-  top: 2px;
-
-  @media (max-width: 768px) {
-    position: absolute;
-    right: 15px;
-    top: 50px;
-    background-color: $slight-yellow;
-    opacity: 0.8;
-    display: flex;
-    flex-direction: column;
-
-    li {
-      font-size: 1rem;
-    }
-  }
-}
-
-.navbar .navbar-nav li a {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #2e1c05;
-  transition: all 0.2s ease-out;
-}
-.navbar-default {
-  border-color: none;
-}
-
-.navbar-scroll {
-  // opacity: 1;
-  background-color: #f4de7f;
-
-  .navbar .navbar-nav li a {
-    color: white;
-  }
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    height: 50px;
-  }
-
-  .navbar-nav > li > a {
-    padding: 0;
-    // margin-top: 35px;
-    margin-left: 50px;
-    line-height: 50px;
-  }
-
-  /* Navbar when scrolled */
-
-  .navbar-scroll {
-    height: 50px;
-    line-height: 50px;
-  }
-
-  .navbar-scroll #top-social-menu {
-    display: none;
-    transition: all 0.2s ease-out;
-  }
-
-  .navbar-scroll .navbar-nav > li > a {
-    opacity: 1;
-    padding: 0;
-    margin-top: 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .navbar-toggle {
-    display: block;
-  }
-}
-
-/* # Hover Link Effect
-================================ */
-@media (max-width: 768px) {
-  .navbar-nav > li > a::after {
-    position: absolute;
-    top: 80%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: #3c3c3c;
-    content: "";
-    opacity: 0;
-    transition: height 0.3s, opacity 0.3s, transform 0.3s;
-    transform: translateY(-10px);
-  }
-
-  .navbar-nav > li > a:hover::after,
-  .navbar-nav > li > a:focus::after {
-    height: 2px;
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-/* # Social menu
-================================ */
-#top-social {
-  @media (max-width: 996px) {
-    display: none;
-  }
-  @media (max-width: 768px) {
-    display: block;
-  }
-}
-
-#top-social-menu {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  top: 7px;
-  right: 50px;
-  font-size: 12px;
-  z-index: 101;
-  padding-right: 0px;
-  list-style: none;
-  color: #2e1c05;
-  transition: all 0.2s ease-out;
-
-  @media (max-width: 994px) {
-    display: none;
-  }
-
-  @media (max-width: 768px) {
-    display: flex;
-    right: 100px;
-  }
-}
-
-#top-social-menu li {
-  // float: left;
-  padding: 10px 15px;
-}
-
-#top-social-menu li:last-child {
-  padding-right: 0;
-}
-
-#top-social-menu li a {
-  text-decoration: none;
-  color: #3c3c3c;
-}
-
-#top-social-menu li a:hover {
-  text-decoration: none;
-  color: #543a1a;
-}
-
-#top-social-menu i {
-  font-size: 16px;
-
-  transition: all 0.2s ease-in;
-}
-
-#top-social-menu i:hover {
-  text-decoration: none;
-  color: #543a1a;
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-  only screen and (min--moz-device-pixel-ratio: 2),
-  only screen and (-o-min-device-pixel-ratio: 2/1),
-  only screen and (min-device-pixel-ratio: 2),
-  only screen and (min-resolution: 192dpi),
-  only screen and (min-resolution: 2dppx) {
-  /* logo */
-  .navbar-brand {
-    background-image: url(/img/logo5.png) !important;
-    background-repeat: no-repeat !important;
-    background-size: 72px 43px !important;
-  }
-}
 
 .scene {
   padding: 0;
