--- a/jedy-2/css/style_v4.css
+++ b/jedy-2/css/style_v4.css
@@ -10,7 +10,7 @@ Default Styles
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Noto Sans TC", sans-serif, "微軟正黑體";
+  font-family: "Comfortaa", sans-serif, "微軟正黑體";
   color: black;
   background-color: cornsilk;
 }
@@ -25,222 +25,6 @@ body li {
 
 body strong {
   font-weight: 1000;
-}
-
-/*================================================================
-Navbar
-================================================================*/
-#main-navbar {
-  width: 100%;
-}
-
-#main-navbar .container > .navbar-header {
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
-.navbar {
-  margin-bottom: 0;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-}
-
-.navbar-container {
-  position: relative;
-  width: 100%;
-}
-
-.nav {
-  margin: 0 auto;
-  position: absolute;
-  top: 2px;
-}
-
-@media (max-width: 768px) {
-  .nav {
-    position: absolute;
-    right: 15px;
-    top: 50px;
-    background-color: cornsilk;
-    opacity: 0.8;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .nav li {
-    font-size: 1rem;
-  }
-}
-
-.navbar .navbar-nav li a {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #2e1c05;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-}
-
-.navbar-default {
-  border-color: none;
-}
-
-.navbar-scroll {
-  background-color: #f4de7f;
-}
-
-.navbar-scroll .navbar .navbar-nav li a {
-  color: white;
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    height: 50px;
-  }
-  .navbar-nav > li > a {
-    padding: 0;
-    margin-left: 50px;
-    line-height: 50px;
-  }
-  /* Navbar when scrolled */
-  .navbar-scroll {
-    height: 50px;
-    line-height: 50px;
-  }
-  .navbar-scroll #top-social-menu {
-    display: none;
-    -webkit-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-  }
-  .navbar-scroll .navbar-nav > li > a {
-    opacity: 1;
-    padding: 0;
-    margin-top: 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .navbar-toggle {
-    display: block;
-  }
-}
-
-/* # Hover Link Effect
-================================ */
-@media (max-width: 768px) {
-  .navbar-nav > li > a::after {
-    position: absolute;
-    top: 80%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: #3c3c3c;
-    content: "";
-    opacity: 0;
-    -webkit-transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-    transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-    transition: height 0.3s, opacity 0.3s, transform 0.3s;
-    transition: height 0.3s, opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
-    -webkit-transform: translateY(-10px);
-            transform: translateY(-10px);
-  }
-  .navbar-nav > li > a:hover::after,
-  .navbar-nav > li > a:focus::after {
-    height: 2px;
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-}
-
-/* # Social menu
-================================ */
-@media (max-width: 996px) {
-  #top-social {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  #top-social {
-    display: block;
-  }
-}
-
-#top-social-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  position: absolute;
-  top: 7px;
-  right: 50px;
-  font-size: 12px;
-  z-index: 101;
-  padding-right: 0px;
-  list-style: none;
-  color: #2e1c05;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-}
-
-@media (max-width: 994px) {
-  #top-social-menu {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  #top-social-menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    right: 100px;
-  }
-}
-
-#top-social-menu li {
-  padding: 10px 15px;
-}
-
-#top-social-menu li:last-child {
-  padding-right: 0;
-}
-
-#top-social-menu li a {
-  text-decoration: none;
-  color: #3c3c3c;
-}
-
-#top-social-menu li a:hover {
-  text-decoration: none;
-  color: #543a1a;
-}
-
-#top-social-menu i {
-  font-size: 16px;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-#top-social-menu i:hover {
-  text-decoration: none;
-  color: #543a1a;
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-  /* logo */
-  .navbar-brand {
-    background-image: url(/img/logo5.png) !important;
-    background-repeat: no-repeat !important;
-    background-size: 72px 43px !important;
-  }
 }
 
 .scene {
@@ -1507,4 +1291,4 @@ li.layer:nth-child(12) a {
       -ms-flex-pack: center;
           justify-content: center;
 }
-/*# sourceMappingURL=style_v3.css.map */
+/*# sourceMappingURL=style_v4.css.map */
