--- a/DataRunRun/css/form.css
+++ b/DataRunRun/css/form.css
@@ -21,10 +21,11 @@
     left: 0;
     position: fixed;
     top: 0;
-    z-index: 9999;
+    z-index: 999999999;
     background-color: rgba(0, 0, 0, .5);
     transition: .5s;
     overflow:auto;
+
 }
 .form-popup .form-wrapper {
     top: 2em;
